--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Philo
+title: Welcome to Philo's World
 subtitle:
 description:
-author: Philodddd
+author: Philo
 language:
 timezone:
 
