--- a/themes/yilia/_config.yml
+++ b/themes/yilia/_config.yml
@@ -130,4 +130,4 @@ friends:
   友情链接5: http://localhost:4000/
   友情链接6: http://localhost:4000/
 
-aboutme: philo zhou<br><br><br>
+aboutme: 水尼玛<br><br><br>
