--- a/themes/yilia/_config.yml
+++ b/themes/yilia/_config.yml
@@ -130,4 +130,4 @@ friends:
   友情链接5: http://localhost:4000/
   友情链接6: http://localhost:4000/
 
-aboutme: 嘘，别让梦睡着了！<br>一个又懒又笨什么都不会的人<br><br>
+aboutme: 嘘，别让梦睡着了！<br>一个又懒又笨只会做梦的人<br><br>
