--- a/themes/yilia/_config.yml
+++ b/themes/yilia/_config.yml
@@ -132,4 +132,4 @@ friends:
   友情链接5: http://localhost:4000/
   友情链接6: http://localhost:4000/
 
-aboutme:   私はこの場所をしつこく保つべきではありませんでしたが，あなたはここにいます。誰かが私の悩みについて私に尋ねた場合，私はあなたの名前を敢えて言わない。静けさ、夢を眠らせないで！
+aboutme:   :)
