--- a/themes/inside/_config.yml
+++ b/themes/inside/_config.yml
@@ -106,8 +106,8 @@ profile:
 
 # Sidebar navigation links
 menu:
-  📝 Home: /
-  🐈 About: /about
+  🏠 Home: /
+  📄 About: /about
   # 🔗 Links: /links
   🔍 Search: /search
 
