--- a/_config.inside.yml
+++ b/_config.inside.yml
@@ -10,7 +10,7 @@ appearance:
   # Border color, default '#e0e0e0'
   border_color:
   # body background, default '#f5f7fa'
-  background: https://blogpic-1301978692.cos.ap-chongqing.myqcloud.com/bolg/dust_scratches.png
+  background: images/dust_scratches.png
   # Sidebar background (when opened), default to accent_color    
   sidebar_background:
   # Card background, default '#fff'
@@ -100,7 +100,7 @@ profile:
   email: zhouchi0106@163.com
 
   # You can set Avatar URL directly
-  avatar: https://blogpic-1301978692.cos.ap-chongqing.myqcloud.com/bolg/avatar.jpg
+  avatar: /assets/img/avatar.jpg
 
   bio: 知行合一
 
@@ -174,9 +174,9 @@ page:
 post:
   per_page: 10
   # reading_time: true
-  reading_time:
-    wpm: 150
-    text: ":words words in :minutes min"
+  # reading_time:
+  #   wpm: 150
+  #   text: ":words words in :minutes min"
 
   #The following settings are the same as the page
   toc: true
