--- a/_config.inside.yml
+++ b/_config.inside.yml
@@ -27,11 +27,11 @@ appearance:
     # Url of font css file
     # Below is a font set containing Baloo Bhaijaan, Josefin Sans, Montserrat and Inconsolata from Google Fonts.
     url: //fonts.googleapis.com/css?family=Baloo+Bhaijaan|Inconsolata|Josefin+Sans|Montserrat
-
+    #url: //cdn.jsdelivr.net/gh/fiteen/fiteen.github.io@v0.1.0/font.css
     # Base font which applied to body
     base: "'Josefin Sans', 'PingFang SC', Microsoft YaHei"
     # Sidebar author font, fallback to `base`
-    logo:
+    logo: 'Josefin Sans'
     # Sidebar menu font, fallback to `base`
     menu: 'Baloo Bhaijaan'
     # Font for:
@@ -140,7 +140,7 @@ sns:
 # Sidebar footer copyright info
 footer:
   # Set to false to hide.
-  copyright: '&copy; 2022 ❤️ <a href="">Philo</a>'
+  copyright: '&copy; 2022 ❤️ <a href="/">Philo</a>'
 
   # Set to false to hide Hexo link.
   powered: true
@@ -175,7 +175,7 @@ post:
   per_page: 10
   # reading_time: true
   # reading_time:
-  #   wpm: 150
+  #   wpm: 200
   #   text: ":words words in :minutes min"
 
   #The following settings are the same as the page
@@ -410,6 +410,20 @@ pwa:
 # Plugins
 plugins:
   #Built-in plugins
+  # jQery
+  # - //cdnjs.loli.net/ajax/libs/jquery/3.2.1/jquery.min.js
+
+  # # Font Awesome
+  # # - //netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css
+  # #- lib/font-awesome/css/font-awesome.min.css
+
+  # # 代码复制
+  # - position: [post, page]
+  #   template: |
+  #     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/clipboard@2.0.4/dist/clipboard.js"></script>
+  #     <script type="text/javascript" src="//cdn.jsdelivr.net/gh/fiteen/fiteen.github.io@v0.1.0/clipboard-use.js"></script>
+  #     <link href="//cdn.jsdelivr.net/gh/fiteen/fiteen.github.io@v0.1.1/clipboard.css" rel="stylesheet">
+  #     <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
   #- cipher:
       #placeholder: Passcode is required
       #excerpt: Content encrypted
@@ -427,6 +441,30 @@ plugins:
         '#607D8B',
         '#2a2b33'
       ]
+  # # - font-awesome/css/font-awesome.min.css
+  - lib/font-awesome/css/font-awesome.min.css
+
+  # inside 主题没有引入 jQuery 框架，需要手动引入
+  # - //cdnjs.loli.net/ajax/libs/jquery/3.2.1/jquery.min.js
+  - lib/jquery.min.js
+  # 插件生效范围：post 和 page
+  - position: [post, page]
+    template: |
+      <script type="text/javascript" src="lib/clipboard.min.js"></script>  
+      <script type="text/javascript" src="lib/clipboard.js"></script>
+      <script type="text/javascript" src="lib/clipboard-use.js"></script>
+      <link href="lib/clipboard.css" rel="stylesheet">
+  #<link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+
+  # # inside 主题没有引入 jQuery 框架，需要手动引入
+  # - //cdnjs.loli.net/ajax/libs/jquery/3.2.1/jquery.min.js
+  # # 插件生效范围：post 和 page
+  # - position: [post, page]
+  #   template: |
+  #     <script type="text/javascript" src="/lib/clipboard.js"></script>
+  #     <script type="text/javascript" src="/lib/clipboard-use.js"></script>
+  #     <link href="/lib/clipboard.css" rel="stylesheet">
+
 
   # Global Inject script/style
   # By default script will be injected into <body>, and style will be injected into <head>
