--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "version": "6.1.0"
   },
   "dependencies": {
+    "babel-core": "^6.26.3",
+    "babel-preset-env": "^1.7.0",
     "hexo": "^6.0.0",
     "hexo-deployer-git": "^3.0.0",
     "hexo-generator-archive": "^1.0.0",
@@ -24,7 +26,9 @@
     "hexo-server": "^3.0.0",
     "hexo-theme-inside": "^2.7.0-beta.23",
     "hexo-theme-landscape": "^0.0.3",
+    "html-minifier": "^4.0.0",
     "markdown-it": "^12.3.2",
-    "markdown-it-container": "^3.0.0"
+    "markdown-it-container": "^3.0.0",
+    "uglify-js": "^3.15.3"
   }
 }
