--- a/_config.yml
+++ b/_config.yml
@@ -3,12 +3,12 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Welcome to Philo's World
+title: Welcome to Philochi's World
 root: /
 subtitle: 知行合一
 description: ''
 keywords:
-author: Philo
+author: Philochi
 language: en
 timezone: ''
 
