--- a/_config.inside.yml
+++ b/_config.inside.yml
@@ -97,7 +97,7 @@ appearance:
 profile:
   # `email` is used for gravatar(https://en.gravatar.com),
   # fallback to `hexo.config.email` if not specified
-  email: zhouchi0106@163.com
+  # email: zhouchi0106@163.com
 
   # You can set Avatar URL directly
   avatar: /assets/img/avatar.jpg
@@ -131,7 +131,7 @@ sns:
   #   url:
   #   template: <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="black" width="18px" height="18px"><path d="M0 0h24v24H0z" fill="none"/><path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"/></svg>
 
-  email: zhouchi0106@163.com
+  email: zhouchi.dlut@foxmail.com
   # If you use hexo-generator-feed, `sns.feed` can be left blank
   # and the theme will try to get `hexo.config.feed.path`.
   feed:
@@ -140,7 +140,7 @@ sns:
 # Sidebar footer copyright info
 footer:
   # Set to false to hide.
-  copyright: '&copy; 2022 ❤️ <a href="/">Philo</a>'
+  copyright: '&copy; 2022 ❤️ <a href="/">Philochi</a>'
 
   # Set to false to hide Hexo link.
   powered: true
