--- a/_config.inside.yml
+++ b/_config.inside.yml
@@ -140,7 +140,7 @@ sns:
 # Sidebar footer copyright info
 footer:
   # Set to false to hide.
-  copyright: '&copy; 2022 ❤️ <a href="/">Philochi</a>'
+  copyright: '&copy; 2022 ❤️ <a href="/">Flynety</a>'
 
   # Set to false to hide Hexo link.
   powered: true
