修改账户名信息

--- a/_config.yml
+++ b/_config.yml
@@ -3,12 +3,12 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Welcome to Flynety's World
+title: Welcome to Feechie's World
 root: /
 subtitle: 知行合一
 description: ''
 keywords:
-author: Flynety
+author: Feechie
 language: en
 timezone: ''
 
