--- a/_config.inside.yml
+++ b/_config.inside.yml
@@ -140,7 +140,7 @@ sns:
 # Sidebar footer copyright info
 footer:
   # Set to false to hide.
-  copyright: '&copy; 2023 ❤️ <a href="/">Feechie</a>'
+  copyright: '&copy; 2025 ❤️ <a href="/">Feechii</a>'
 
   # Set to false to hide Hexo link.
   powered: true
