--- a/_config.yml
+++ b/_config.yml
@@ -3,12 +3,12 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Welcome to Feechie's World
+title: Welcome to Feechii's World
 root: /
 subtitle: 知行合一
 description: ''
 keywords:
-author: Feechie
+author: Feechii
 language: en
 timezone: ''
 
